// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`normalizeTrainServicesData example 1 1`] = `
[
  {
    "destinationArrivalTime": "09:21",
    "durationMinutes": 18,
    "originArrivalTime": "09:02",
    "originDepartureTime": "09:03",
    "platform": "2",
    "scheduledOriginArrivalTime": "09:02",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "09:37",
    "durationMinutes": 14,
    "originArrivalTime": "09:22",
    "originDepartureTime": "09:23",
    "platform": "1",
    "scheduledOriginArrivalTime": "09:10",
    "status": "delayed",
  },
  {
    "destinationArrivalTime": "10:04",
    "durationMinutes": 15,
    "originArrivalTime": "09:47",
    "originDepartureTime": "09:49",
    "platform": "2",
    "scheduledOriginArrivalTime": "09:47",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:21",
    "durationMinutes": 18,
    "originArrivalTime": "10:02",
    "originDepartureTime": "10:03",
    "platform": "2",
    "scheduledOriginArrivalTime": "10:02",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:26",
    "durationMinutes": 15,
    "originArrivalTime": "10:09",
    "originDepartureTime": "10:11",
    "platform": null,
    "scheduledOriginArrivalTime": "10:09",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "11:04",
    "durationMinutes": 15,
    "originArrivalTime": "10:48",
    "originDepartureTime": "10:49",
    "platform": null,
    "scheduledOriginArrivalTime": "10:48",
    "status": "on-time",
  },
]
`;

exports[`normalizeTrainServicesData example 2 1`] = `
[
  {
    "destinationArrivalTime": "09:45",
    "durationMinutes": 14,
    "originArrivalTime": "09:30",
    "originDepartureTime": "09:31",
    "platform": "1",
    "scheduledOriginArrivalTime": "09:10",
    "status": "delayed",
  },
  {
    "destinationArrivalTime": "10:04",
    "durationMinutes": 15,
    "originArrivalTime": "09:47",
    "originDepartureTime": "09:49",
    "platform": "2",
    "scheduledOriginArrivalTime": "09:47",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:21",
    "durationMinutes": 18,
    "originArrivalTime": "10:02",
    "originDepartureTime": "10:03",
    "platform": "2",
    "scheduledOriginArrivalTime": "10:02",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:26",
    "durationMinutes": 15,
    "originArrivalTime": "10:09",
    "originDepartureTime": "10:11",
    "platform": "1",
    "scheduledOriginArrivalTime": "10:09",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "11:04",
    "durationMinutes": 15,
    "originArrivalTime": "10:48",
    "originDepartureTime": "10:49",
    "platform": null,
    "scheduledOriginArrivalTime": "10:48",
    "status": "on-time",
  },
  {
    "platform": null,
    "scheduledOriginArrivalTime": "11:02",
    "status": "cancelled",
  },
  {
    "destinationArrivalTime": "11:26",
    "durationMinutes": 15,
    "originArrivalTime": "11:09",
    "originDepartureTime": "11:11",
    "platform": null,
    "scheduledOriginArrivalTime": "11:09",
    "status": "on-time",
  },
]
`;
